add_subdirectory(common)
add_subdirectory(interface)
add_subdirectory(client)
add_subdirectory(meta)
add_subdirectory(console)
add_subdirectory(wal)
add_subdirectory(raftex)
add_subdirectory(kvstore)
add_subdirectory(parser)
add_subdirectory(dataman)
add_subdirectory(graph)
add_subdirectory(daemons)
add_subdirectory(storage)
add_subdirectory(webservice)
add_subdirectory(tools)

